issues: make disabled buttons more visible fixes #715

--- a/github-dark.css
+++ b/github-dark.css
@@ -2167,9 +2167,9 @@
   a.minibutton.disabled:hover, span.minibutton:disabled:hover,
   span.minibutton.disabled:hover, .search-result-group,
   .gist-quicksearch-result-group {
-    background: #222 !important;
-    border-color: #282828 !important;
-    color: #444 !important;
+    background: #282828 !important;
+    border-color: #484848 !important;
+    color: #555 !important;
   }
   .btn-outline:disabled, .btn-outline:disabled:hover, .btn-outline.disabled,
   .btn-outline.disabled:hover, .btn.btn-outline:disabled,
